<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayoutImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/cardHeader"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/bg_linea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedBottom" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/roud_background"
            android:padding="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_atomo" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtMateria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/flexo_regular"
            android:text="@string/subject"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editextMateria"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edge_edittext"
            android:fontFamily="@font/flexo_regular"
            android:gravity="center_vertical"
            android:hint="@string/nameSubject"
            android:inputType="text"
            android:maxLength="35"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="8sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cardHeader">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardHT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/background_card"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toStartOf="@+id/cardHP"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ht"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvHorasTeorica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    tools:text="2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/buttonHTRemove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/text"
                        android:src="@drawable/ic_remove"
                        app:borderWidth="0dp"
                        app:tint="@color/background_card" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/buttonHTAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:backgroundTint="@color/text"
                        android:src="@drawable/ic_add"
                        android:tintMode="src_in"
                        app:borderWidth="0dp"
                        app:tint="@color/background_card" />


                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardHP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/background_card"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardHT"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvHorasPractica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    tools:text="2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/buttonHPRemove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/text"
                        android:src="@drawable/ic_remove"
                        app:borderWidth="0dp"
                        app:tint="@color/background_card" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/buttonHPAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:backgroundTint="@color/text"
                        android:src="@drawable/ic_add"
                        app:borderWidth="0dp"
                        app:tint="@color/background_card" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/flexo_regular"
            android:text="@string/credit"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etCreditos"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_edge_edittext"
            android:fontFamily="@font/flexo_regular"
            android:gravity="center_vertical"
            android:hint="@string/numberCredits"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCC" />

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/prueba"> <!-- Fondo de la imagen -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/flexo_regular"
                android:text="@string/calculate"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>